apps/seerr/overlays/nishir-tailnet/gatewayclass.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: seerr
spec:
  controllerName: gateway.envoyproxy.io/gatewayclass-controller
  parametersRef:
    name: seerr
    group: gateway.envoyproxy.io
    kind: EnvoyProxy
    namespace: shikanime
