apps/seerr/overlays/nishir-tailnet/httproute-redirect.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: seerr-redirect
spec:
  hostnames:
    - seerr.i.shikanime.studio
  parentRefs:
    - name: seerr
      sectionName: http
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
