apps/seerr/overlays/nishir-tailnet/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: seerr
spec:
  hostnames:
    - seerr.i.shikanime.studio
  parentRefs:
    - name: seerr
      sectionName: https
  rules:
    - backendRefs:
        - name: seerr
          port: http
