apps/seerr/overlays/nishir-tailnet/patch-httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: seerr
spec:
  hostnames:
    - seerr.taila659a.ts.net
  parentRefs:
    - name: seerr
      sectionName: https
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: seerr-redirect
spec:
  hostnames:
    - seerr.taila659a.ts.net
  parentRefs:
    - name: seerr
      sectionName: http
